syntax = "proto3";
import "WebCommentFeed.proto";
import "WebComboCommentFeed.proto";
import "WebLikeFeed.proto";
import "WebGiftFeed.proto";
import "WebSystemNoticeFeed.proto";
import "WebShareFeed.proto";

option java_package = "tech.ordinaryroad.live.chat.client.kuaishou.protobuf";

message SCWebFeedPush {
  string displayWatchingCount = 1;
  string displayLikeCount = 2;
  uint64 pendingLikeCount = 3;
  uint64 pushInterval = 4;
  repeated WebCommentFeed commentFeeds = 5;
  string commentCursor = 6;
  repeated WebComboCommentFeed comboCommentFeed = 7;
  repeated WebLikeFeed likeFeeds = 8;
  repeated WebGiftFeed giftFeeds = 9;
  string giftCursor = 10;
  repeated WebSystemNoticeFeed systemNoticeFeeds = 11;
  repeated WebShareFeed shareFeeds = 12;

}