syntax = "proto3";
import "SimpleUserInfo.proto";
import "WebCommentFeedShowType.proto";
import "LiveAudienceState.proto";

option java_package = "tech.ordinaryroad.live.chat.client.kuaishou.protobuf";

message WebCommentFeed {
  string id = 1;
  SimpleUserInfo user = 2;
  string content = 3;
  string deviceHash = 4;
  uint64 sortRank = 5;
  string color = 6;
  WebCommentFeedShowType showType = 7;
  LiveAudienceState senderState = 8;

}